# auctus

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Dockerfile  NOTICE.txt  Pipfile  README.md  base.Dockerfile  benchmark_profilers.py  benchmark_profilers_analyse.py  client.ipynb  comm.txt  datamart_cli.py  demo_queries.ipynb  docker-compose-cached-build.py  docker-compose.yml  env.default  install_deps.py  k8s.yml  nginx.conf  noaa.ipynb  profile.ipynb  prometheus.yml  pyproject.toml  python_api.ipynb  query.ipynb  stream.ipynb
apiserver/: Dockerfile  setup.py
apiserver/apiserver/: __main__.py  augment.py  base.py  dataset_transforms.py  download.py  enhance_metadata.py  graceful_shutdown.py  main.py  nl4vis.py  profile.py  search.py  sessions.py  upload.py  web.py
cache_cleaner/: Dockerfile  setup.py
cache_cleaner/cache_cleaner/: __main__.py  cache.py
contrib/: k8s.yml  nginx.conf
contrib/grafana-dashboards/: Caching.json  Lazo Metrics.json  Node.json  Processes.json  Profiling.json  Requests per minute.json
contrib/k8s/: Makefile  README.md  app.libsonnet  auctus.libsonnet  auctus.yml  ckan.yml  config.yml  deployment.jsonnet  deployments.yml  elasticsearch-minikube.libsonnet  elasticsearch-minikube.yml  elasticsearch.libsonnet  elasticsearch.yml  get-data.libsonnet  get-data.yml  ingress.libsonnet  ingress.yml  jaeger.libsonnet  jaeger.yml  minio.libsonnet  minio.yml  monitoring.libsonnet  monitoring.yml  nominatim.libsonnet  nominatim.yml  rabbitmq.libsonnet  rabbitmq.yml  redis.libsonnet  redis.yml  secrets.jsonnet  secrets.yml  services.yml  snapshotter.libsonnet  socrata.yml  test.yml  uaz-indicators.yml  utils.libsonnet  volumes-local.libsonnet  volumes-minikube.libsonnet  volumes-minikube.yml  (+4 more)
coordinator/: Dockerfile  setup.py
coordinator/coordinator/: __main__.py  cache.py  coordinator.py  elasticsearch.yml  web.py
datamart_cli/: setup.py
datamart_client/: datamart.py  datamart_client.py  setup.py
datamart_coordinator/: Dockerfile  coordinator.py  setup.py  web.py
datamart_coordinator/datamart_coordinator/: coordinator.py  web.py
datamart_coordinator/templates/: base.html  dataset.html  index.html
datamart_core/: __init__.py  common.py  discovery.py  ingestion.py  rabbitmq.py  server.py  setup.py  utils.py
datamart_core/datamart_core/: __init__.py  common.py  discovery.py
datamart_frontend/: package-lock.json  package.json
datamart_frontend/public/: index.html
datamart_frontend/src/: Logo.tsx  index.css  index.tsx  serviceWorker.ts
datamart_ingest/: Dockerfile  setup.py
datamart_ingest/datamart_ingest/: main.py  profiler.py
datamart_profiler/: Dockerfile  setup.py
datamart_profiler/datamart_profiler/: identify_types.py  main.py  profiler.py
datamart_query/: Dockerfile  README.rst  setup.py
datamart_query/datamart_query/: web.py
datamart_web/: Dockerfile  package-lock.json  package.json
datamart_web/public/: index.html
datamart_web/src/: App.css  App.tsx
discovery/: Dockerfile  d3m_seeds.py  d3m_seeds_discovery.py  example_discovery.py  test_discovery.py
discovery/ckan/: Dockerfile  ckan_discovery.py  setup.py
discovery/isi/: Dockerfile  isi_discovery.py  setup.py
discovery/noaa/: Dockerfile  setup.py
discovery/socrata/: Dockerfile  datamart_socrata_discovery.py  setup.py  socrata_discovery.py
discovery/uaz_indicators/: Dockerfile  setup.py  uaz_indicators.py
discovery/web/: Dockerfile  setup.py  web_discovery.py
discovery/worldbank/: Dockerfile  setup.py  worldbank_discovery.py
discovery/zenodo/: Dockerfile  setup.py  zenodo_discovery.py
doc/schemas/: restapi.yaml
docker/: ckan.json  grafana.dockerfile  haproxy.conf  haproxy.dockerfile  install_deps.py  nominatim.dockerfile  prometheus.yml  rabbitmq  rabbitmq.dockerfile  socrata.json  synonyms.txt  zenodo.json
docs/: conf.py  index.rst  internals.rst  restapi.rst  schemas.rst  webui.rst
examples/: COVID.ipynb  Dockerfile  covid.ipynb  data-augmentation-seed-problems.ipynb  example_d3m_discovery.py  example_discovery.py  example_ingestion.py  profile.ipynb  python-api-fifa2018_manofmatch.ipynb  python-api-medical-malpractice.ipynb  python-api-ny-taxi-demand.ipynb  python-api.ipynb  rest-api-fifa2018_manofmatch.ipynb  rest-api-medical-malpractice.ipynb  rest-api-ny-taxi-demand.ipynb  rest-api.ipynb  upload.ipynb
frontend/: .eslintignore  .eslintrc.json  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json  tslint.json
lazo_server/: Dockerfile
lib_augmentation/: NOTICE.txt  README.rst  setup.py
lib_client/: datamart.py  setup.py
lib_core/: MANIFEST.in  NOTICE.txt  setup.py
lib_fslock/: LICENSE.txt  NOTICE.txt  datamart_fslock.py  setup.py
lib_geo/: README.rst  setup.py
lib_materialize/: NOTICE.txt  README.rst  setup.py
lib_profiler/: MANIFEST.in  NOTICE.txt  README.rst  setup.py
profiler/: Dockerfile  profiler.py  setup.py
query/: Dockerfile  setup.py
scripts/: README.md  canonicalize_yaml.py  clear_caches.py  dataset_to_column_index.py  dataset_to_sup_index.py  delete_dataset.py  docker-compose-cached-build.py  docker_build_push.sh  docker_clear_caches.sh  docker_export_all.py  docker_export_all.sh  docker_import_all.sh  docker_import_snapshot.sh  docker_purge_source.sh  docker_save_uploads.sh  elastic_export.py  elastic_list_sources.py  elastic_purge_source.py  es_reindex.sh  export_all.py  freshen_old_index.py  get_scdp.sh  import.py  import_all.py  list_big_datasets.py  list_sources.py  load_env.sh  migrate-point-format.py  migrate-source-url.py  migrate-spatial-coverage.py  migrate-temporal-coverage.py  migrate-types-and-attributes.py  minikube-load-images.sh  purge_source.py  report-uploads.sh  reprocess.py  reprocess_all.py  run_frontend_tests.sh  run_tests.sh  setup.sh  (+1 more)
snapshotter/: setup.py
stubs/: xlrd.pyi
tests/: __main__.py  ci.env  test-upload.sh  test_apiserver.py  test_augmentation.py  test_common.py  test_integ.py  test_latlong.py  test_materialize.py  test_profile.py  test_search.py  upload.query.json  utils.py
(+275 files in other folders)
