[tool.poetry]
name = "auctus"
version = "0.8"
description = "Auctus system meta-package"

license = "Apache-2.0"

authors = [
    "Remi Rampin <remi.rampin@nyu.edu>",
]

repository = "https://gitlab.com/ViDA-NYU/auctus/auctus"
homepage = "https://auctus.vida-nyu.org/"

keywords = ["auctus", "datamart"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

packages = []

include = []

[tool.poetry.dependencies]
python = "^3.7"
auctus-data-profiler = {path = "./lib_profiler"}
auctus-materialize = {path = "./lib_materialize"}
auctus-data-augmentation = {path = "./lib_augmentation"}
datamart-geo = {path = "lib_geo"}
auctus-server-core = {path = "./lib_core"}
auctus-coordinator-service = {path = "./coordinator"}
auctus-profiler-service = {path = "./profiler"}
auctus-api-service = {path = "./apiserver"}
auctus-noaa-discovery-service = {path = "./discovery/noaa"}
auctus-socrata-discovery-service = {path = "./discovery/socrata"}
auctus-zenodo-discovery-service = {path = "./discovery/zenodo"}
auctus-uaz-indicators-service = {path = "./discovery/uaz_indicators"}
auctus-worldbank-discovery-service = {path= "./discovery/worldbank"}
auctus-isi-discovery-service = {path= "./discovery/isi"}

[tool.poetry.dev-dependencies]
flake8 = "*"
PyYaml = "*"
requests = "*"
coverage = "*" # Keep it in sync with Dockerfiles for CI
jsonschema = ">=3.0,<4"
readme_renderer = "*"
Sphinx = "*"
sphinx-rtd-theme = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
